# cfd-andreia

./: .gitignore  CMakeLists.txt  README.md
Class 1/recursos/: tema.qrc  tema_escuro.qss
Class 1/src/: main.cpp
Class 2/: CMakeLists.txt
Class 2 - versao 2/: README.md  package-lock.json  pyproject.toml  setup.py
Class 2 - versao 2/src/class2_v2_app/: __init__.py  _burgers.c  _burgers.pyx  burgers_fallback.py  function_catalog.py  function_selector.py  graph_widget.py  latex_widget.py  main.py  main_window.py  time_method_catalog.py
Class 2/recursos/: tema_escuro.qss
Class 2/src/: functioncatalog.cpp  functioncatalog.h  functionselector.cpp  functionselector.h  graphwidget.cpp  graphwidget.h  latexwidget.cpp  latexwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Class 3/: README.md  package-lock.json  pyproject.toml  setup.py
Class 3/src/class3_app/: __init__.py  __main__.py  _burgers.c  _burgers.pyx  burgers_backend.py  burgers_fallback.py  function_catalog.py  function_selector.py  graph_widget.py  latex_widget.py  main_window.py  space_time_method_catalog.py
Class 4/: README.md  pyproject.toml  setup.py
Class 4/src/class4_app/: __init__.py  _heat.c  _heat.pyx  boundary_condition_catalog.py  function_catalog.py  graph_widget.py  heat_backend.py  heat_fallback.py  latex_widget.py  main_window.py  selector_widget.py  space_method_catalog.py
Class 5/: main.py
Problem heat transfer 2D/: main.py  requirements.txt
Problem heat transfer 2D/teste/: main.py
burguers/: main.py  main2.py  requirements.txt
burguers/dados/: comparacao_cpu_gpu_cupy.csv  erros_convergencia_gpu_cupy.csv  ordens_observadas_cupy.csv
src/: aproximacoes.cpp  aproximacoes.hpp  grafico_funcao.cpp  grafico_funcao.hpp  janela_principal.cpp  janela_principal.hpp
