[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "class2-v2-pyqt-cython"
version = "0.1.0"
description = "Reproducao do Class 2 em PyQt6 com backend numerico em Cython."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
]

[project.optional-dependencies]
webengine = [
    "PyQt6-WebEngine>=6.6",
]

[project.scripts]
class2-versao-2-app = "class2_v2_app.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
